Corrected contrast and added autoslug to create unique slugs automatically

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .dark-bg {
-    background-color: #395675;
+    background-color: #82aab7e6;
 }
 
 .main-bg {
@@ -39,7 +39,7 @@ body {
 
 .card {
     border: none;
-    background-color: transparent;
+    background-color: #82aab7e6;
 }
 
 .image-container {
@@ -52,7 +52,7 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #23BBBB;
+    background-color: #3b71ca;
 }
 
 h1 {
@@ -64,6 +64,7 @@ h1 {
     color: white;
     margin: 4px;
     text-transform: uppercase;
+    font-weight: 900;
 }
 
 .masthead {
@@ -79,11 +80,14 @@ h1 {
     background-color: #395675;
     color: white;
     position: relative;
+    font-weight: 800;
 }
 
 .masthead-image {
     position: relative;
     overflow: hidden;
+    height: auto;
+    width: auto;
 }
 
 .masthead-image:after {
@@ -107,7 +111,7 @@ h1 {
 
 .post-link:hover,
 .page-link {
-    color: #0dcaf0;
+    color: #3b71ca;
 }
 
 .post-title {
@@ -123,27 +127,23 @@ h1 {
 .post-subtitle {
     margin-left: 5%;
     color: lightgray;
-}
-
-.btn-signup {
-    background-color: #23BBBB;
-    color: #fff;
+    font-weight: 700;
 }
 
 .btn-form {
     background-color: #fff;
-    color: #23BBBB;
+    color: #3b71ca;
     font-weight: 700;
 }
 
-.btn-signup:hover,
-.btn-signup:active {
+.btn-form:hover,
+.btn-form:active {
     background-color: #fff;
-    color: #23BBBB;
+    color: #3b71ca;
 }
 
 .link {
-    color: #23BBBB;
+    color: #3b71ca;
     text-decoration: none;
 }
 
@@ -160,13 +160,6 @@ h1 {
     transform : translate(-50%, -50%);
 }
 
-#commentbox {
-    
-    min-height: calc(5.5em + 1rem + 2px);
-    padding: 0.5rem 1rem;
-    font-size: 1.25rem;
-    border-radius: 0.3rem;
-}
 
 .footer {
     position: relative;
